--- a/src/app/components/confirmation/confirmation/confirmation.component.html
+++ b/src/app/components/confirmation/confirmation/confirmation.component.html
@@ -1,1 +1,7 @@
-<p>confirmation works!</p>
+<div class="alignCenter">
+    <h1> Success </h1>
+    <p>Thank you for shoping</p>
+    <p>your <b>{{total | currency:'USD':'symbol':'1.2-2'}}</b> order is confirmed!</p>
+    <p>Please  allow 1-3 buisness day(s) for shipping</p>
+    <button class="button" (click)=" navigate()">&larr; Back to product list</button>
+</div>
