--- a/src/app/layout/header/header/header.component.html
+++ b/src/app/layout/header/header/header.component.html
@@ -1,8 +1,9 @@
-<div>
-<h1>MyStore</h1>
-<ul>
-    <li><a routerLink="/">product-list</a></li>|
-    <li><a routerLink="/cart">cart</a></li>
-</ul>
+<div class="container">
+    <h1 class="header">MyStore</h1>
+
+    <ul class="nav">
+        <li class="nav-link"><a class="nav-anchor" routerLink="/">product-list</a></li>|
+        <li class="nav-link"><a  class="nav-anchor" routerLink="/cart">cart</a></li>
+    </ul>
 
 </div>
