--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+*,body{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.alignCenter{
+    text-align: center;
+}
+
+.alert {
+    font-weight: bold;
+    border-radius: 7px;
+    background: #c90303a1;
+    color: white;
+    font-size: 200%;
+    width: 100%;
+    padding: 1%;
+    align-items: center;
+    text-align: center;
+}
+
